--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@vercel/analytics": "^1.4.1",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
